# Chess-Engine-in-cpp

./: CMakeLists.txt  README.md  TODO.txt  mingw-w64-toolchain.cmake
benchmark_tests/: benchmark_tests.h  branching_factor.cpp  perft_tests.cpp  puzzle_tests.cpp  search_and_eval.cpp
chess/: bit_operations.h  board.cpp  board.h  inline_functions.h  misc.cpp  misc.h  move.cpp  move.h  search.h  see.cpp  see.h  types.h
chess/movegen/: movegen.cpp  movegen.h  update.cpp
debug_tests/: bitmask_tests.cpp  debug_tests.h  evaluation_tests.cpp  game_scenario.cpp  move_tests.cpp  see_tests.cpp
engine/: UCI.cpp  hashtable.cpp  init.cpp  main.cpp
engine/eval/: evaluation.cpp  evaluation.h
engine/search/: movesort.cpp  search.cpp  search.h  search_helper.cpp  time_manager.cpp
include/: board.h  config.h  constants.h  evaluation.h  game_statistics.h  globals.h  hashtable.h  init.h  inline_functions.h  macros.h  misc.h  movegen.h  movesort.h  search.h  timer.h  types.h  uci.h  update.h
releases/: Aramis_v1_3_0  ChessEngine_v1_3_0
src/: UCI.cpp  attack.cpp  attack.h  board.cpp  board.h  evaluation.cpp  globals.cpp  globals.h  hashtable.cpp  init.cpp  main.cpp  misc.cpp  misc.h  movegen.cpp  movegen.h  movesort.cpp  search.cpp  update.cpp
src/book/: book.cpp  book.h
src/eval/: evalparams.h  evaluation.cpp  evaluation.h  new_evalparams.h
src/logger/: logger.cpp  logger.h
src/movegen/: movegen.cpp  movegen.h  update.cpp  update.h
src/search/: movesort.cpp  movesort.h  old_search.cpp  search.cpp  search.h  search_helper.cpp  searchparams.h  see.cpp  see.h
test/benchmark_tests/: benchmark_tests.h  perft_tests.cpp  puzzle_tests.cpp  search_and_eval.cpp
test/debug_tests/: bitmask_tests.cpp  debug_tests.h  evaluation_tests.cpp  game_scenario.cpp  move_tests.cpp  see_tests.cpp
tests/: bitmask_tests.cpp  bitmask_tests.h  evaluation_tests.cpp  move_tests.cpp  perft_tests.cpp  puzzle_tests.cpp  tests.h
tests/resources/: perft.epd
tuner/src/: base.h  config.h  init_tuner.cpp  init_tuner.h
tuner/src/engines/: myeval.cpp  myeval.h
